# code-macros

./: .deepsource.toml  .eslintrc  .gitignore  README.md  package-lock.json  package.json  vue.config.js
.cargo/: config.toml
.github/workflows/: build.yml  ci.yaml  cross-build.yaml
public/: index.html
src/: App.vue  main.js  store.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: execute.rs  initiators.rs  main.rs
src-tauri/src/execute/: condition.rs  expression.rs  string_parser.rs  variable.rs
src-tauri/src/initiators/: cron.rs  keypress.rs
src/components/: CodeArea.vue  CodeArgumentsPopup.vue  CodeGroup.vue  CodeInfo.vue  CodeList.vue  ConditionCreator.vue  DraggingCode.vue  ExpressionCreator.vue  FileSelector.vue  KeyCombination.vue  MacroCreator.vue  MacroFunction.vue  MacroInitiator.vue  SliderRange.vue  TitlebarElement.vue
src/data/: codeGroups.json  codeTypes.js  codeTypes.json  conditionTypes.json  expressionTypes.json  initiatorTypes.json
src/router/: index.js
src/views/: LogPage.vue  MacroEditor.vue  MacrosList.vue  MacrosPage.vue  RedirectPage.vue  SettingsPage.vue  WelcomePage.vue
