[package]
name = "codemacros"
version = "0.1.0"
description = "An application that lets you graphically program macros to run on your computer."
authors = ["Glitch752"]
license = "GNU GPLv3"
repository = "https://github.com/Glitch752/code-macros"
default-run = "codemacros"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/amrbashir/tauri-plugin-single-instance/" }
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
once_cell = { version = "1.13.1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
